# sudoku-rs

./: Cargo.toml  Dockerfile  heroku.yml
src/: core.rs  lib.rs  main.rs  sudoku_make.rs  sudoku_solve.rs  utils.rs
src/core/: sudoku_make.rs  sudoku_solve.rs  utils.rs
tests/: sudoku_solve.rs
