[package]
name = "sudoku-rs"
version = "0.1.0"
authors = ["wattaihei <wattaihei.rapyuta@gmail.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.0"
actix-rt = "1.0"
actix-cors = "0.3.0"
rand = "0.6.5"
serde = "1.0"
serde_json = "1.0"